CMake supports Lua

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,21 +2,27 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 PROJECT(Jakopter)
 
-ADD_DEFINITIONS(-std=c99)
+#ADD_DEFINITIONS(-std=c99)
 
 # pthreads
-FIND_PACKAGE(Threads)
+#FIND_PACKAGE(Threads REQUIRED)
+FIND_PACKAGE(Lua51)
 
 INCLUDE_DIRECTORIES("include/")
+INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
 
 SET(CMAKE_BUILD_TYPE DEBUG)
 
-SET(EXECUTABLE_OUTPUT_PATH build/${CMAKE_BUILD_TYPE})
+SET(CMAKE_POSITION_INDEPENDANT_CODE ON)
 
+SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY build/${CMAKE_BUILD_TYPE})
+
+# Voir ADD_SUBDIRECTORY
 SET(
 	SRC_FILES
 	src/drone.c
 	src/navdata.c
+	src/lua_bindings.c
 )
 
 ADD_LIBRARY(
@@ -24,6 +30,6 @@ ADD_LIBRARY(
 	${SRC_FILES}	
 )
 
-# link pthreads
-TARGET_LINK_LIBRARIES(jakopter ${CMAKE_THREADS_LIBS_INIT})
+#TARGET_LINK_LIBRARIES(jakopter ${CMAKE_THREADS_LIBS_INIT})
+TARGET_LINK_LIBRARIES(jakopter pthread)
 
