CMakeLists.txt cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,14 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-PROJECT(Jakopter)
+PROJECT(jakopter)
 
-#ADD_DEFINITIONS(-std=c99)
-
-# pthreads
-#FIND_PACKAGE(Threads REQUIRED)
+FIND_PACKAGE(Threads REQUIRED)
 FIND_PACKAGE(Lua51)
 
 INCLUDE_DIRECTORIES("include/")
 INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
 
 SET(CMAKE_BUILD_TYPE DEBUG)
-
-SET(CMAKE_POSITION_INDEPENDANT_CODE ON)
 
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY build/${CMAKE_BUILD_TYPE})
 
@@ -30,6 +25,5 @@ ADD_LIBRARY(
 	${SRC_FILES}	
 )
 
-#TARGET_LINK_LIBRARIES(jakopter ${CMAKE_THREADS_LIBS_INIT})
-TARGET_LINK_LIBRARIES(jakopter pthread)
+TARGET_LINK_LIBRARIES(jakopter ${CMAKE_THREAD_LIBS_INIT})
 
