CMake: add SDL2 and libavcodec dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,20 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 PROJECT(jakopter)
 
+SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
+
 FIND_PACKAGE(Threads REQUIRED)
+FIND_PACKAGE(SDL2)
+FIND_PACKAGE(FFMPEG)
 FIND_PACKAGE(Lua51)
-# Voir http://www.cmake.org/Wiki/CMake:How_To_Find_Libraries#Using_external_libraries_that_CMake_doesn.27t_yet_have_modules_for pour sdl2 et libavcodec
-# libavcodec : https://github.com/performous/composer/blob/master/cmake/FindAVCodec.cmake
-# sdl2 : https://code.google.com/p/dolphin-emu/source/browse/CMakeTests/FindSDL2.cmake?name=async-dvd
+
+# Debug : print all declared variables
+#get_cmake_property(_variableNames VARIABLES)
+#foreach (_variableName ${_variableNames})
+#	message(STATUS "${_variableName}=${${_variableName}}")
+#endforeach()
+
 INCLUDE_DIRECTORIES("include/")
-INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
 
 SET(CMAKE_BUILD_TYPE DEBUG)
 
@@ -22,10 +29,10 @@ SET(
 
 SET(
 	VIDEO_SRC_FILES
-	video.c
-	video_decode.c
-	video_display.c
-	video_process.c
+	src/video.c
+	src/video_decode.c
+	src/video_process.c
+	src/video_display.c
 )
 
 SET(
@@ -38,15 +45,28 @@ SET(
 	${CORE_SRC_FILES}
 )
 
+IF(AVCODEC_FOUND AND SDL2_FOUND)
+	MESSAGE(STATUS "Compiling with libavcodec and SDL2")
+	INCLUDE_DIRECTORIES(${AVCODEC_INCLUDE_DIRS} ${SDL2_INCLUDE_DIR})
+	SET(
+		SRC_FILES
+		${SRC_FILES}
+		${VIDEO_SRC_FILES}
+	)
+ELSE()
+	MESSAGE(WARNING "Compiling WITHOUT libavcodec and SDL2")
+ENDIF()
+
 IF(LUA51_FOUND)
-	MESSAGE("Compiling with Lua")
+	MESSAGE(STATUS "Compiling with Lua")
+	INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
 	SET(
 		SRC_FILES
 		${SRC_FILES}
 		${LUA_SRC_FILES}
 	)
 ELSE()
-	MESSAGE("Compiling WITHOUT Lua")
+	MESSAGE(WARNING "Compiling WITHOUT Lua")
 ENDIF()
 
 ADD_LIBRARY(
@@ -55,4 +75,6 @@ ADD_LIBRARY(
 )
 
 TARGET_LINK_LIBRARIES(jakopter ${CMAKE_THREAD_LIBS_INIT})
-
+IF(AVCODEC_FOUND AND SDL2_FOUND)
+	TARGET_LINK_LIBRARIES(jakopter ${AVCODEC_LIBRARIES} ${SDL2_LIBRARY})
+ENDIF()
