Move libraries to lib

--- a/src/leapmotion/Makefile
+++ b/src/leapmotion/Makefile
@@ -1,9 +1,9 @@
 ARCH := $(shell uname -m)
 
 ifeq ($(ARCH), x86_64)
-LEAP_LIBRARY := x64/libLeap.so -Wl,-rpath,x64
+LEAP_LIBRARY := lib/x64/libLeap.so -Wl,-rpath,lib/x64
 else
-LEAP_LIBRARY := x86/libLeap.so -Wl,-rpath,x86
+LEAP_LIBRARY := lib/x86/libLeap.so -Wl,-rpath,lib/x86
 endif
 
 Leap: Leap.cpp
