Fix CMake for Lua

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,11 @@ ADD_LIBRARY(
 )
 
 TARGET_LINK_LIBRARIES(jakopter ${CMAKE_THREAD_LIBS_INIT})
+
+IF(LUA51_FOUND)
+	TARGET_LINK_LIBRARIES(jakopter ${LUA_LIBRARIES})
+ENDIF()
+
 IF(AVCODEC_FOUND AND SDL2_FOUND)
 	TARGET_LINK_LIBRARIES(jakopter ${AVCODEC_LIBRARIES} ${SDL2_LIBRARY})
 ENDIF()
