Test a FindLua instead of FindLua51

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 FIND_PACKAGE(Threads REQUIRED)
 FIND_PACKAGE(SDL2)
 FIND_PACKAGE(FFMPEG)
-FIND_PACKAGE(Lua51)
+FIND_PACKAGE(Lua)
 
 # Debug : print all declared variables
 #get_cmake_property(_variableNames VARIABLES)
@@ -57,7 +57,7 @@ ELSE()
 	MESSAGE(WARNING "Compiling WITHOUT libavcodec and SDL2")
 ENDIF()
 
-IF(LUA51_FOUND)
+IF(LUA_FOUND)
 	MESSAGE(STATUS "Compiling with Lua")
 	INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
 	SET(
@@ -76,7 +76,7 @@ ADD_LIBRARY(
 
 TARGET_LINK_LIBRARIES(jakopter ${CMAKE_THREAD_LIBS_INIT})
 
-IF(LUA51_FOUND)
+IF(LUA_FOUND)
 	TARGET_LINK_LIBRARIES(jakopter ${LUA_LIBRARIES})
 ENDIF()
 
