Make the video stuff optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ FIND_PACKAGE(SDL2)
 FIND_PACKAGE(FFMPEG)
 FIND_PACKAGE(Lua)
 
-# Debug : print all declared variables
+# Debug: print all declared variables
 #get_cmake_property(_variableNames VARIABLES)
 #foreach (_variableName ${_variableNames})
 #	message(STATUS "${_variableName}=${${_variableName}}")
@@ -54,8 +54,11 @@ IF(AVCODEC_FOUND AND SDL2_FOUND)
 		${SRC_FILES}
 		${VIDEO_SRC_FILES}
 	)
+
+	SET(WITH_VIDEO ON)
 ELSE()
 	MESSAGE(WARNING "Compiling WITHOUT libavcodec and SDL2")
+	SET(WITH_VIDEO OFF)
 ENDIF()
 
 IF(LUA_FOUND)
@@ -69,6 +72,8 @@ IF(LUA_FOUND)
 ELSE()
 	MESSAGE(WARNING "Compiling WITHOUT Lua")
 ENDIF()
+
+CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/include/common.h.in ${CMAKE_SOURCE_DIR}/include/common.h)
 
 ADD_LIBRARY(
 	jakopter SHARED 
