Enable -Wall warnings (gcc, clang)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ FIND_PACKAGE(Lua)
 INCLUDE_DIRECTORIES("include/")
 
 SET(CMAKE_BUILD_TYPE DEBUG)
+ADD_DEFINITIONS("-Wall") # Not compatible with MSVC
 
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY build/${CMAKE_BUILD_TYPE})
 
