change usleep->nanosleep + fix last pullrq

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ FIND_PACKAGE(Lua)
 INCLUDE_DIRECTORIES("include/")
 
 SET(CMAKE_BUILD_TYPE DEBUG)
+ADD_DEFINITIONS("-Wall")
 
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY build/${CMAKE_BUILD_TYPE})
 
