Integration of com_master in video display. Still much to do.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ FIND_PACKAGE(Lua)
 INCLUDE_DIRECTORIES("include/")
 
 SET(CMAKE_BUILD_TYPE DEBUG)
-ADD_DEFINITIONS("-Wall")
+ADD_DEFINITIONS("-Wall -std=c99")
 
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY build/${CMAKE_BUILD_TYPE})
 
