Proper leap motion support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ FIND_PACKAGE(SDL2)
 FIND_PACKAGE(SDL2_ttf)
 FIND_PACKAGE(FFMPEG)
 FIND_PACKAGE(Lua)
+FIND_PACKAGE(Leap)
 
 # SET (CMAKE_C_COMPILER "/usr/bin/clang")
 #Debug : print all declared variables
@@ -41,6 +42,11 @@ SET(
 )
 
 SET(
+	LEAP_SRC_FILES
+	src/leap.cpp	
+)
+
+SET(
 	LUA_SRC_FILES
 	src/lua_bindings.c
 )
@@ -60,6 +66,18 @@ IF(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND)
 	)
 ELSE()
 	MESSAGE(WARNING "Compiling WITHOUT libavcodec and SDL2")
+ENDIF()
+
+IF(LEAP_FOUND)
+	MESSAGE(STATUS "Compiling with leap motion support")
+	INCLUDE_DIRECTORIES(${LEAP_INCLUDE_DIRS})
+	SET(
+		SRC_FILES
+		${SRC_FILES}
+		${LEAP_SRC_FILES}
+	)
+ELSE()
+	MESSAGE(WARNING "Compiling WITHOUT leap motion support")
 ENDIF()
 
 IF(LUA_FOUND)
@@ -87,4 +105,8 @@ ENDIF()
 
 IF(AVCODEC_FOUND AND SDL2_FOUND)
 	TARGET_LINK_LIBRARIES(jakopter ${AVCODEC_LIBRARIES} ${SDL2_LIBRARY} ${SDL2TTF_LIBRARY})
+ENDIF()
+
+IF(LEAP_FOUND)
+	TARGET_LINK_LIBRARIES(jakopter ${LEAP_LIBRARIES})
 ENDIF()
