New FinfFFmpeg.cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 FIND_PACKAGE(Threads REQUIRED)
 FIND_PACKAGE(SDL2)
 FIND_PACKAGE(SDL2_ttf)
-FIND_PACKAGE(FFMPEG)
+FIND_PACKAGE(FFmpeg)
 FIND_PACKAGE(Lua)
 FIND_PACKAGE(Leap)
 
@@ -67,6 +67,8 @@ IF(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND)
 		${VIDEO_SRC_FILES}
 	)
 
+	ADD_DEFINITIONS(${AVCODEC_DEFINITIONS})
+
 	SET(WITH_VIDEO ON)
 ELSE()
 	MESSAGE(WARNING "Compiling WITHOUT libavcodec and SDL2")
@@ -112,7 +114,7 @@ IF(LUA_FOUND)
 	TARGET_LINK_LIBRARIES(jakopter ${LUA_LIBRARIES})
 ENDIF()
 
-IF(AVCODEC_FOUND AND SDL2_FOUND)
+IF(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND)
 	TARGET_LINK_LIBRARIES(jakopter ${AVCODEC_LIBRARIES} ${SDL2_LIBRARY} ${SDL2TTF_LIBRARY})
 ENDIF()
 
