--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,9 @@ PROJECT(jakopter)
 
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
-
 FIND_PACKAGE(Threads REQUIRED)
 FIND_PACKAGE(SDL2)
-FIND_PACKAGE(SDL2_ttf)
+FIND_PACKAGE(SDL2TTF)
 FIND_PACKAGE(FFmpeg)
 FIND_PACKAGE(Lua)
 FIND_PACKAGE(Leap)
@@ -60,7 +59,7 @@ SET(
 
 IF(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND)
 	MESSAGE(STATUS "Compiling with libavcodec and SDL2")
-	INCLUDE_DIRECTORIES(${AVCODEC_INCLUDE_DIRS} ${SDL2_INCLUDE_DIR})
+	INCLUDE_DIRECTORIES(${AVCODEC_INCLUDE_DIRS} ${SDL2_INCLUDE_DIR} ${SDL2TTF_INCLUDE_DIR})
 	SET(
 		SRC_FILES
 		${SRC_FILES}
