Fix a typo in CMakeLists. Com : actually remove the pointer from the table.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,7 +85,7 @@ IF(LEAP_FOUND)
 	SET(WITH_LEAP ON)
 ELSE()
 	MESSAGE(WARNING "Compiling WITHOUT leap motion support")
-	SET(WITH_VIDEO OFF)
+	SET(WITH_LEAP OFF)
 ENDIF()
 
 IF(LUA_FOUND)
