Added changes from F. Bodin : Build fix for Mac, user input module and test script (adapted for com channel lua api changes).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ SET(
 	src/navdata.c
 	src/com_channel.c
 	src/com_master.c
+	src/user_input.c
 )
 
 SET(
@@ -115,7 +116,7 @@ IF(LUA_FOUND)
 ENDIF()
 
 IF(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND)
-	TARGET_LINK_LIBRARIES(jakopter ${AVCODEC_LIBRARIES} ${SDL2_LIBRARY} ${SDL2TTF_LIBRARY})
+	TARGET_LINK_LIBRARIES(jakopter ${AVCODEC_LIBRARIES} ${AVUTIL_LIBRARIES} ${SDL2_LIBRARY} ${SDL2TTF_LIBRARY})
 ENDIF()
 
 IF(LEAP_FOUND)
