Move leap motion to another executable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ SET(CMAKE_BUILD_TYPE DEBUG)
 ADD_DEFINITIONS("-Wall") # Not compatible with MSVC
 
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY build/${CMAKE_BUILD_TYPE})
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY build/${CMAKE_BUILD_TYPE})
 
 SET(
 	CORE_SRC_FILES
@@ -79,15 +80,8 @@ ENDIF()
 IF(LEAP_FOUND)
 	MESSAGE(STATUS "Compiling with leap motion support")
 	INCLUDE_DIRECTORIES(${LEAP_INCLUDE_DIRS})
-	SET(
-		SRC_FILES
-		${SRC_FILES}
-		${LEAP_SRC_FILES}
-	)
-	SET(WITH_LEAP ON)
 ELSE()
 	MESSAGE(WARNING "Compiling WITHOUT leap motion support")
-	SET(WITH_LEAP OFF)
 ENDIF()
 
 IF(LUA_FOUND)
@@ -109,6 +103,13 @@ ADD_LIBRARY(
 	${SRC_FILES}
 )
 
+IF(LEAP_FOUND)
+	ADD_EXECUTABLE(
+		leap
+		${LEAP_SRC_FILES}
+	)
+ENDIF()
+
 TARGET_LINK_LIBRARIES(jakopter ${CMAKE_THREAD_LIBS_INIT})
 
 IF(LUA_FOUND)
@@ -120,5 +121,5 @@ IF(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND)
 ENDIF()
 
 IF(LEAP_FOUND)
-	TARGET_LINK_LIBRARIES(jakopter ${LEAP_LIBRARIES})
+	TARGET_LINK_LIBRARIES(leap ${LEAP_LIBRARIES})
 ENDIF()
