coding style & image support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,12 @@ SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 FIND_PACKAGE(Threads REQUIRED)
 FIND_PACKAGE(SDL2)
 FIND_PACKAGE(SDL2TTF)
+FIND_PACKAGE(SDL2Image)
 FIND_PACKAGE(FFmpeg)
 FIND_PACKAGE(Lua)
 FIND_PACKAGE(Leap)
 FIND_PACKAGE(Curses)
+FIND_PACKAGE(OpenCV)
 
 # Debug: print all declared variables
 #get_cmake_property(_variableNames VARIABLES)
@@ -48,7 +50,7 @@ SET(
 
 SET(
 	LEAP_SRC_FILES
-	src/leap.cpp	
+	src/leap.cpp
 )
 
 SET(
@@ -65,10 +67,12 @@ SET(
 	SRC_FILES
 	${CORE_SRC_FILES}
 )
-
-IF(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND)
+if(SDL2IMAGE_FOUND)
+	message(STATUS "Found sdl2image")
+endif()
+IF(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND AND SDL2IMAGE_FOUND)
 	MESSAGE(STATUS "Compiling with libavcodec and SDL2")
-	INCLUDE_DIRECTORIES(${AVCODEC_INCLUDE_DIRS} ${SDL2_INCLUDE_DIR} ${SDL2TTF_INCLUDE_DIR})
+	INCLUDE_DIRECTORIES(${AVCODEC_INCLUDE_DIRS} ${SDL2_INCLUDE_DIR} ${SDL2TTF_INCLUDE_DIR} ${SDL2IMAGE_INCLUDE_DIR})
 	SET(
 		SRC_FILES
 		${SRC_FILES}
@@ -138,8 +142,8 @@ IF(LUA_FOUND)
 	TARGET_LINK_LIBRARIES(jakopter ${LUA_LIBRARIES})
 ENDIF()
 
-IF(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND)
-	TARGET_LINK_LIBRARIES(jakopter ${AVCODEC_LIBRARIES} ${AVUTIL_LIBRARIES} ${SDL2_LIBRARY} ${SDL2TTF_LIBRARY})
+IF(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND AND SDL2IMAGE_FOUND)
+	TARGET_LINK_LIBRARIES(jakopter ${AVCODEC_LIBRARIES} ${AVUTIL_LIBRARIES} ${SDL2_LIBRARY} ${SDL2TTF_LIBRARY} ${SDL2IMAGE_LIBRARY})
 ENDIF()
 
 IF(LEAP_FOUND)
