fix string allocation and memory not set in com_channel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ FIND_PACKAGE(FFmpeg)
 FIND_PACKAGE(Lua)
 FIND_PACKAGE(Leap)
 FIND_PACKAGE(Curses)
+FIND_PACKAGE(Visp)
 
 # Debug: print all declared variables
 #get_cmake_property(_variableNames VARIABLES)
@@ -19,7 +20,7 @@ FIND_PACKAGE(Curses)
 #	message(STATUS "${_variableName}=${${_variableName}}")
 #endforeach()
 
-# SET (CMAKE_C_COMPILER "/usr/bin/clang")
+# SET (CMAKE_C_COMPILER "/usr/bin/clang")
 
 INCLUDE_DIRECTORIES("include/")
 
@@ -29,6 +30,10 @@ ADD_DEFINITIONS("-Wall") # Not compatible with MSVC
 
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY build/${CMAKE_BUILD_TYPE})
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY build/${CMAKE_BUILD_TYPE})
+
+if(apple)
+cmake_policy(SET CMP0042 NEW)
+endif()
 
 SET(
 	CORE_SRC_FILES
@@ -44,7 +49,15 @@ SET(
 	src/video.c
 	src/video_queue.c
 	src/video_decode.c
+)
+
+SET(
+	SDL2_SRC_FILES
 	src/video_display.c
+)
+SET(
+	VISP_SRC_FILES
+	src/visp.cpp
 )
 
 SET(
@@ -67,6 +80,7 @@ SET(
 	${CORE_SRC_FILES}
 )
 
+
 IF(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND AND SDL2IMAGE_FOUND)
 	MESSAGE(STATUS "Compiling with libavcodec and SDL2")
 	INCLUDE_DIRECTORIES(${AVCODEC_INCLUDE_DIRS} ${SDL2_INCLUDE_DIR} ${SDL2TTF_INCLUDE_DIR} ${SDL2IMAGE_INCLUDE_DIR})
@@ -74,6 +88,20 @@ IF(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND AND SDL2IMAGE_FOUND)
 		SRC_FILES
 		${SRC_FILES}
 		${VIDEO_SRC_FILES}
+		${SDL2_SRC_FILES}
+	)
+
+	ADD_DEFINITIONS(${AVCODEC_DEFINITIONS})
+
+	SET(WITH_VIDEO ON)
+ELSEIF(AVCODEC_FOUND AND VISP_FOUND)
+	MESSAGE(STATUS "Compiling with libavcodec and libvisp")
+	INCLUDE_DIRECTORIES(${AVCODEC_INCLUDE_DIRS} ${VISP_INCLUDE_DIR})
+	SET(
+		SRC_FILES
+		${SRC_FILES}
+		${VIDEO_SRC_FILES}
+		${VISP_SRC_FILES}
 	)
 
 	ADD_DEFINITIONS(${AVCODEC_DEFINITIONS})
@@ -98,7 +126,7 @@ ELSE()
 	MESSAGE(WARNING "Compiling WITHOUT keyboard command interface")
 ENDIF()
 
-IF(LUA_FOUND AND LUA_VERSION_MAJOR EQUAL 5 AND (LUA_VERSION_MINOR EQUAL 1 OR LUA_VERSION_MINOR EQUAL 2))
+IF(LUA_FOUND AND LUA_VERSION_MAJOR EQUAL 5 AND (LUA_VERSION_MINOR EQUAL 1 OR LUA_VERSION_MINOR EQUAL 2 OR LUA_VERSION_MINOR EQUAL 3))
 	MESSAGE(STATUS "Compiling with Lua")
 	INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
 	SET(
@@ -141,6 +169,8 @@ ENDIF()
 
 IF(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND AND SDL2IMAGE_FOUND)
 	TARGET_LINK_LIBRARIES(jakopter ${AVCODEC_LIBRARIES} ${AVUTIL_LIBRARIES} ${SDL2_LIBRARY} ${SDL2TTF_LIBRARY} ${SDL2IMAGE_LIBRARY})
+ELSEIF(AVCODEC_FOUND AND VISP_FOUND)
+	TARGET_LINK_LIBRARIES(jakopter ${AVCODEC_LIBRARIES} ${AVUTIL_LIBRARIES} ${VISP_LIBRARY})
 ENDIF()
 
 IF(LEAP_FOUND)
