Add visp support + vicon support + macports install script + fix: -battery too low- is a warning now, deletion of SDL_Texture now in rendering thread

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ FIND_PACKAGE(Lua)
 FIND_PACKAGE(Leap)
 FIND_PACKAGE(Curses)
 FIND_PACKAGE(Visp)
+FIND_PACKAGE(Vicon)
 
 # Debug: print all declared variables
 #get_cmake_property(_variableNames VARIABLES)
@@ -21,6 +22,7 @@ FIND_PACKAGE(Visp)
 #endforeach()
 
 # SET (CMAKE_C_COMPILER "/usr/bin/clang")
+# LIST(APPEND CMAKE_CXX_FLAGS "-pthread")
 
 INCLUDE_DIRECTORIES("include/")
 
@@ -31,9 +33,9 @@ ADD_DEFINITIONS("-Wall") # Not compatible with MSVC
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY build/${CMAKE_BUILD_TYPE})
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY build/${CMAKE_BUILD_TYPE})
 
-if(apple)
-cmake_policy(SET CMP0042 NEW)
-endif()
+IF(apple)
+	CMAKE_POLICY(SET CMP0042 NEW)
+ENDIF()
 
 SET(
 	CORE_SRC_FILES
@@ -42,6 +44,7 @@ SET(
 	src/com_channel.c
 	src/com_master.c
 	src/user_input.c
+	src/coords.c
 )
 
 SET(
@@ -66,6 +69,11 @@ SET(
 )
 
 SET(
+	VICON_SRC_FILES
+	src/vicon.cpp
+)
+
+SET(
 	KEYB_SRC_FILES
 	src/cmd.c
 )
@@ -81,42 +89,65 @@ SET(
 )
 
 
-IF(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND AND SDL2IMAGE_FOUND)
-	MESSAGE(STATUS "Compiling with libavcodec and SDL2")
-	INCLUDE_DIRECTORIES(${AVCODEC_INCLUDE_DIRS} ${SDL2_INCLUDE_DIR} ${SDL2TTF_INCLUDE_DIR} ${SDL2IMAGE_INCLUDE_DIR})
+IF(AVCODEC_FOUND)
+	MESSAGE(STATUS "Compiling with libavcodec")
+	INCLUDE_DIRECTORIES(${AVCODEC_INCLUDE_DIRS})
 	SET(
 		SRC_FILES
 		${SRC_FILES}
 		${VIDEO_SRC_FILES}
+	)
+
+	ADD_DEFINITIONS(${AVCODEC_DEFINITIONS})
+
+
+ELSE()
+	MESSAGE(WARNING "Compiling WITHOUT libavcodec")
+	SET(WITH_VIDEO OFF)
+ENDIF()
+
+IF(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND AND SDL2IMAGE_FOUND)
+	MESSAGE(STATUS "Compiling with SDL2")
+	INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR} ${SDL2TTF_INCLUDE_DIR} ${SDL2IMAGE_INCLUDE_DIR})
+	SET(
+		SRC_FILES
+		${SRC_FILES}
 		${SDL2_SRC_FILES}
 	)
 
-	ADD_DEFINITIONS(${AVCODEC_DEFINITIONS})
-
-	SET(WITH_VIDEO ON)
-ELSEIF(AVCODEC_FOUND AND VISP_FOUND)
-	MESSAGE(STATUS "Compiling with libavcodec and libvisp")
-	INCLUDE_DIRECTORIES(${AVCODEC_INCLUDE_DIRS} ${VISP_INCLUDE_DIR})
-	SET(
-		SRC_FILES
-		${SRC_FILES}
-		${VIDEO_SRC_FILES}
-		${VISP_SRC_FILES}
-	)
-
-	ADD_DEFINITIONS(${AVCODEC_DEFINITIONS})
-
 	SET(WITH_VIDEO ON)
 ELSE()
-	MESSAGE(WARNING "Compiling WITHOUT libavcodec and SDL2")
+	MESSAGE(WARNING "Compiling WITHOUT SDL2")
 	SET(WITH_VIDEO OFF)
 ENDIF()
+
+
+# IF(AVCODEC_FOUND AND VISP_FOUND)
+# 	MESSAGE(STATUS "Compiling with libvisp")
+# 	INCLUDE_DIRECTORIES(${VISP_INCLUDE_DIR})
+# 	SET(
+# 		SRC_FILES
+# 		${SRC_FILES}
+# 		${VISP_SRC_FILES}
+# 	)
+# 	SET(WITH_VIDEO ON)
+# ELSE()
+# 	MESSAGE(WARNING "Compiling WITHOUT visp")
+# 	SET(WITH_VIDEO OFF)
+# ENDIF()
 
 IF(LEAP_FOUND)
 	MESSAGE(STATUS "Compiling with leap motion support")
 	INCLUDE_DIRECTORIES(${LEAP_INCLUDE_DIRS})
 ELSE()
 	MESSAGE(WARNING "Compiling WITHOUT leap motion support")
+ENDIF()
+
+IF(VICON_FOUND)
+	MESSAGE(STATUS "Compiling with vicon motion capture support")
+	INCLUDE_DIRECTORIES(${VICON_INCLUDE_DIRS})
+ELSE()
+	MESSAGE(WARNING "Compiling WITHOUT vicon motion capture support")
 ENDIF()
 
 IF(CURSES_FOUND)
@@ -152,6 +183,13 @@ IF(LEAP_FOUND)
 	)
 ENDIF()
 
+IF(VICON_FOUND)
+	ADD_EXECUTABLE(
+		vicon
+		${VICON_SRC_FILES}
+	)
+ENDIF()
+
 IF(CURSES_FOUND)
 	ADD_EXECUTABLE(
 		keyb_control
@@ -167,12 +205,23 @@ IF(LUA_FOUND)
 	TARGET_LINK_LIBRARIES(jakopter ${LUA_LIBRARIES})
 ENDIF()
 
-IF(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND AND SDL2IMAGE_FOUND)
-	TARGET_LINK_LIBRARIES(jakopter ${AVCODEC_LIBRARIES} ${AVUTIL_LIBRARIES} ${SDL2_LIBRARY} ${SDL2TTF_LIBRARY} ${SDL2IMAGE_LIBRARY})
-ELSEIF(AVCODEC_FOUND AND VISP_FOUND)
-	TARGET_LINK_LIBRARIES(jakopter ${AVCODEC_LIBRARIES} ${AVUTIL_LIBRARIES} ${VISP_LIBRARY})
+IF(WITH_VIDEO)
+	TARGET_LINK_LIBRARIES(jakopter ${AVCODEC_LIBRARIES} ${AVUTIL_LIBRARIES})
 ENDIF()
+
+IF(WITH_VIDEO AND SDL2_FOUND AND SDL2TTF_FOUND AND SDL2IMAGE_FOUND)
+	TARGET_LINK_LIBRARIES(jakopter ${SDL2_LIBRARY} ${SDL2TTF_LIBRARY} ${SDL2IMAGE_LIBRARY})
+ENDIF()
+
+# IF(WITH_VIDEO AND VISP_FOUND)
+# 	TARGET_LINK_LIBRARIES(jakopter ${VISP_LIBRARY})
+# ENDIF()
 
 IF(LEAP_FOUND)
 	TARGET_LINK_LIBRARIES(leap ${LEAP_LIBRARIES})
+ENDIF()
+
+
+IF(VICON_FOUND)
+	TARGET_LINK_LIBRARIES(vicon ${CMAKE_THREAD_LIBS_INIT} ${VICON_LIBRARIES})
 ENDIF()
