--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,7 +132,7 @@ else()
 	set(WITH_VIDEO OFF)
 endif()
 
-if(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND AND SDL2IMAGE_FOUND)
+if(AVCODEC_FOUND AND SDL2_FOUND AND SDL2TTF_FOUND AND SDL2IMAGE_FOUND AND NOT USE_VISP)
 	message(STATUS "Compiling with SDL2")
 	include_directories(${SDL2_INCLUDE_DIR} ${SDL2TTF_INCLUDE_DIR} ${SDL2IMAGE_INCLUDE_DIR})
 	set(
@@ -243,7 +243,7 @@ if(WITH_VIDEO)
 	target_link_libraries(jakopter ${AVCODEC_LIBRARIES} ${AVUTIL_LIBRARIES})
 endif()
 
-if(WITH_VIDEO AND SDL2_FOUND AND SDL2TTF_FOUND AND SDL2IMAGE_FOUND)
+if(WITH_VIDEO AND SDL2_FOUND AND SDL2TTF_FOUND AND SDL2IMAGE_FOUND AND NOT USE_VISP)
 	target_link_libraries(jakopter ${SDL2_LIBRARY} ${SDL2TTF_LIBRARY} ${SDL2IMAGE_LIBRARY})
 endif()
 
