cleanup headers & log string weren't reset in navdata

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
 
 ## User definitions ##
+#option(USE_VISP "Use visp display instead of sdl" OFF)
 set(USE_VISP OFF)
-
 
 ## Packages ##
 find_package(Threads REQUIRED)
@@ -23,10 +23,10 @@ find_package(Visp)
 find_package(Vicon)
 
 ## Debug: print all declared variables
-#get_cmake_property(_variableNames VARIABLES)
-#foreach (_variableName ${_variableNames})
-#	message(STATUS "${_variableName}=${${_variableName}}")
-#endforeach()
+# get_cmake_property(_variableNames VARIABLES)
+# foreach (_variableName ${_variableNames})
+# 	message(STATUS "${_variableName}=${${_variableName}}")
+# endforeach()
 
 
 ## Compiler Infos ##
