add channel for callback + qrcode detection + face detection into visp ; add the ability to identify the vicon object name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,8 @@ find_package(Vicon)
 
 ## Compiler Infos ##
 
-set (CMAKE_C_COMPILER "/usr/bin/clang")
+#set (CMAKE_C_COMPILER "/usr/bin/clang")
+#set (CMAKE_CXX_COMPILER "/usr/bin/clang++")
 
 include_directories("include/")
 
