--- a/include/common.h.in
+++ b/include/common.h.in
@@ -28,6 +28,9 @@
 #define INT_LEN     11
 #define TSTAMP_LEN  2*INT_LEN+2
 
+#define LUA_API_VERSION 1.0
+#define C_API_VERSION 1.0
+
 struct sockaddr_in addr_drone, addr_client;
 int sock_cmd;
 
