--- a/include/common.h.in
+++ b/include/common.h.in
@@ -1,3 +1,20 @@
+/* Jakopter
+ * Copyright © 2014 - 2015 Thibaud Hulin, Thibaut Rousseau, Hector Labanca, Jérémy Yziquel
+ * Copyright © 2015 ALF@INRIA
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 3 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library. If not, see <http://www.gnu.org/licenses/>.
+ */
 #ifndef JAKOPTER_COMMON_H
 #define JAKOPTER_COMMON_H
 
@@ -29,8 +46,5 @@
 #define float64_t double
 
 #define WIFI_ARDRONE_IP	"192.168.1.1"
-
-struct sockaddr_in addr_drone, addr_client;
-int sock_cmd;
 
 #endif
