Conditions at install time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -378,8 +378,12 @@ endif()
 
 install(TARGETS jakopter DESTINATION ${LIBRARY_OUTPUT_PATH})
 install(TARGETS jakopter DESTINATION ${LIBRARY_OUTPUT_PATH}/lua/${LUA_VERSION_MAJOR}.${LUA_VERSION_MINOR}/)
-install(TARGETS jakopter-vicon jakopter-keyboard DESTINATION ${BINARY_OUTPUT_PATH})
-install(DIRECTORY include/ DESTINATION ${INCLUDE_OUTPUT_PATH} FILES_MATCHING PATTERN "*.h")
+if(WITH_COORDS AND VICON_FOUND)
+	install(TARGETS jakopter-vicon jakopter-keyboard DESTINATION ${BINARY_OUTPUT_PATH})
+endif()
+if(CURSES_FOUND)
+	install(DIRECTORY include/ DESTINATION ${INCLUDE_OUTPUT_PATH} FILES_MATCHING PATTERN "*.h")
+endif()
 
 
 
