--- a/include/utils.h.in
+++ b/include/utils.h.in
@@ -40,6 +40,12 @@
 /* Max number of digit we use in a float (nb digits of an int + 6 decimal digits) and \0*/
 #define FLOAT_LEN INT_LEN+6
 
+#ifdef __MACH__
+#define CLOCK_REALTIME CALENDAR_CLOCK
+#define CLOCK_MONOTONIC SYSTEM_CLOCK
+typedef int clockid_t;
+#endif
+
 int posix_clock_gettime(clockid_t clk_id, struct timespec *ts);
 
 #endif
