--- a/include/utils.h.in
+++ b/include/utils.h.in
@@ -41,18 +41,21 @@
 #define FLOAT_LEN INT_LEN+6
 
 /* OS X does not have clock_gettime, use clock_get_time*/
-#ifdef __MACH__
-#include <mach/clock.h>
+#ifdef __APPLE__
+#include <sys/time.h>
+#include <sys/resource.h>
 #include <mach/mach.h>
-#else
-#include <time.h>
-#endif
-#ifdef __MACH__
-#define CLOCK_REALTIME CALENDAR_CLOCK
-#define CLOCK_MONOTONIC SYSTEM_CLOCK
-typedef int clockid_t;
-#endif
+#include <mach/clock.h>
+#include <mach/mach_time.h>
 
-int posix_clock_gettime(clockid_t clk_id, struct timespec *ts);
+typedef enum {
+	CLOCK_REALTIME,
+	CLOCK_MONOTONIC,
+	CLOCK_PROCESS_CPUTIME_ID,
+	CLOCK_THREAD_CPUTIME_ID
+} clockid_t;
+
+int clock_gettime(clockid_t clk_id, struct timespec *tp);
+#endif
 
 #endif
