Fix memset error on Mac

--- a/include/utils.h.in
+++ b/include/utils.h.in
@@ -35,7 +35,7 @@
 
 /* Max number of digit into an integer plus the sign and \0. */
 #define INT_LEN     13
-/* 2 integers plus the dot and \0*/
+/* 2 integers plus the dot and colon*/
 #define TSTAMP_LEN  2*INT_LEN+2
 /* Max number of digit we use in a float (nb digits of an int + 6 decimal digits) and \0*/
 #define FLOAT_LEN INT_LEN+6
